fixed spacing at top of data table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -456,6 +456,9 @@ li{
 }
 
 .dataTable{
+	h2:first-of-type{
+		margin-top: 0px;
+	}
 	h2:nth-of-type(1) + .breakerBar{
 		background-color: #EDB0B1;
 	}
@@ -663,6 +666,7 @@ li{
 
 .mobileShow{
 	display: none;
+	margin-bottom: 60px;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
